--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Steve Nolte's Git Achievements <img src='http://www.gravatar.com/avatar/e06c431b5e29b38d978f67dd0c46c59d'/></h2>
-Unlocked 16/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 47 points<br>
+Unlocked 17/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 48 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Archivist (Level 1)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
@@ -31,23 +31,24 @@ Unlocked 16/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Apprentice Stone Mason (Level 3)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Baptised</div>  <div class="info">Set global user name using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-config.html">git-config</a>.</div></li>
 <li><div class="title">Caretaker</div>  <div class="info">Added a .gitignore file to a repository.</div></li>
+<li><div class="title">Cherry Picker</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-cherry-pick.html">git-cherry-pick</a> to add a sha from another branch into the current branch.</div></li>
 <li><div class="title">Garage Inventor</div>  <div class="info">Used a custom alias for a Git command</div></li>
 <li><div class="title">Let there be light</div>  <div class="info">Commit without a parent.</div></li>
 <li><div class="title">Student</div>  <div class="info">Accessed the documentation for a command with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-.html">git-</a>[command] --help</div></li>
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-    734 rev-parse
-    713 symbolic-ref
-    711 ls-files
+    739 rev-parse
+    718 symbolic-ref
+    716 ls-files
      43 status
-     19 checkout
+     20 checkout
      14 achievements
       9 pull
       8 commit
       8 branch
       7 add
-      5 log
+      6 log
       5 help
       5 config
       3 reset
@@ -60,6 +61,7 @@ Git commands sorted by usage:
       1 fetch
       1 diff
       1 clone
+      1 cherry-pick
 </pre>
 <script type="text/javascript">
 function showLocked() {
@@ -73,7 +75,6 @@ There are 51 Achievements. Some achievements can be leveled up depending on the 
 <ul>
 <li><div class="title">Beach Lion</div><div class="info">Restricted login shell for GIT-only SSH access with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-shell.html">git-shell</a></div></li>
 <li><div class="title">Cathedral Worker</div><div class="info">Cloned submodule repository and checked out commits specified by superproject.</div></li>
-<li><div class="title">Cherry Picker</div><div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-cherry-pick.html">git-cherry-pick</a> to add a sha from another branch into the current branch.</div></li>
 <li><div class="title">Chimney Sweeper</div><div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-gc.html">git-gc</a> to run a number of housekeeping tasks on the current repository.</div></li>
 <li><div class="title">Cleaning lady</div><div class="info">Remove untracked files from the working tree with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-clean.html">git-clean</a></div></li>
 <li><div class="title">Collector</div><div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
