--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Steve Nolte's Git Achievements <img src='http://www.gravatar.com/avatar/e06c431b5e29b38d978f67dd0c46c59d'/></h2>
-Unlocked 17/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 48 points<br>
+Unlocked 18/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 50 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Archivist (Level 1)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
@@ -23,6 +23,7 @@ Unlocked 17/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Apprentice Butcher (Level 1)</div>  <div class="info">Performed an interactive rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> -i.</div></li>
 <li><div class="title">Apprentice Carpenter (Level 1)</div>  <div class="info">Custom <a href="http://www.kernel.org/pub/software/scm/git/docs/githooks.html">git-hooks</a> are installed which help catch issues before they are shared.</div></li>
 <li><div class="title">Apprentice Cathedral Architect (Level 1)</div>  <div class="info">Added a submodule to a repository.</div></li>
+<li><div class="title">Apprentice Chimney Sweeper (Level 1)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-gc.html">git-gc</a> to run a number of housekeeping tasks on the current repository.</div></li>
 <li><div class="title">Apprentice Historian (Level 1)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Apprentice Historian (Level 2)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Apprentice Socialite (Level 1)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
@@ -38,9 +39,9 @@ Unlocked 17/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-    739 rev-parse
-    718 symbolic-ref
-    716 ls-files
+    743 rev-parse
+    722 symbolic-ref
+    720 ls-files
      43 status
      20 checkout
      14 achievements
@@ -57,6 +58,7 @@ Git commands sorted by usage:
       2 rebase
       2 merge
       2 init
+      2 gc
       2 format-patch
       1 fetch
       1 diff
@@ -75,7 +77,6 @@ There are 51 Achievements. Some achievements can be leveled up depending on the 
 <ul>
 <li><div class="title">Beach Lion</div><div class="info">Restricted login shell for GIT-only SSH access with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-shell.html">git-shell</a></div></li>
 <li><div class="title">Cathedral Worker</div><div class="info">Cloned submodule repository and checked out commits specified by superproject.</div></li>
-<li><div class="title">Chimney Sweeper</div><div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-gc.html">git-gc</a> to run a number of housekeeping tasks on the current repository.</div></li>
 <li><div class="title">Cleaning lady</div><div class="info">Remove untracked files from the working tree with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-clean.html">git-clean</a></div></li>
 <li><div class="title">Collector</div><div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Delivery Boy</div><div class="info">Move objects and refs by archive with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-bundle.html">git-bundle</a>.</div></li>
